<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
                android:padding="16dp"
        >

        <TextView
            android:text="@string/shoe_id_text"
            android:textStyle="bold"
            android:textColor="@color/buttoncolor"
            android:id="@+id/shoeID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/brand_text"
            android:textStyle="bold"
            android:id="@+id/shoeBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/shoe_model_text"
            android:textStyle="bold"
            android:id="@+id/shoeModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/shoe_size_text"
            android:textStyle="bold"
            android:id="@+id/shoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/shoe_color_text"
            android:textStyle="bold"
            android:id="@+id/shoeColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/shoe_price_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/shoePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>