<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/deletebutton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatebutton" />

    <TextView
        android:id="@+id/textViewinventory"
        android:layout_width="339dp"
        android:layout_height="128dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="148dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/textview_background"
        android:gravity="center"
        android:text="@string/shoe_inventory_system_textview"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/addbutton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/backgroundcolor"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoesbutton" />

    <Button
        android:id="@+id/updatebutton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/backgroundcolor"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addbutton" />

    <Button
        android:id="@+id/shoesbutton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/backgroundcolor"
        android:text="@string/shoes_list"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewinventory"
        app:layout_constraintVertical_bias="0.143" />

</androidx.constraintlayout.widget.ConstraintLayout>