<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagebackgr"
    tools:context=".Add">

    <EditText
        android:id="@+id/editTextBrand"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_brand_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/brandtextview"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/editTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_color_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/colortextview"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBrand"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextModel"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_model_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/modeltextview"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextColor"
        tools:ignore="Autofill,LabelFor"  />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_price_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/priceedittext"
        android:inputType="numberDecimal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModel"
        tools:ignore="Autofill,LabelFor,TextContrastCheck"/>

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_size_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/sizeedittext"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/buttonApplyandAddShoe"
        android:layout_width="339dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/buttoncolor"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/button_apply_and_add_shoe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSize" />

    <Button
        android:id="@+id/buttonBacktoMenu"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/backgroundcolor"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/button_back_to_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonApplyandAddShoe" />

</androidx.constraintlayout.widget.ConstraintLayout>