<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delete"
    android:background="@color/pagebackgr"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Delete">

    <EditText
        android:id="@+id/editTextShoeID"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_numbers_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/shoeidtextview"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/buttoncolor"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/deletebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextShoeID" />

    <Button
        android:id="@+id/buttonBacktoMenu"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/backgroundcolor"
        android:text="@string/button_back_to_menu"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>